# CODING

./: .gitignore  CMakeLists.txt  RemoveExeFiles.ps1
.idx/: dev.nix
Java/4th_Sem_JAVA_Lab/03-02-23/: addition.java  areaOfCircle.java  factorial.java  fibonacciSeries.java  oddEvenCheck.java  primeNumCheck.java  simpleInterestCalc.java
Java/4th_Sem_JAVA_Lab/17-03-23/: areaOfACircleUsingOOPs.java  factorialUsingOOPs.java  fibonacciSeriesUsingOOPs.java  oddEvenCheckUsingOOPs.java  problems.txt  simpleInterestUsingOOPs.java
Java/4th_Sem_JAVA_Lab/19-05-23/: InterfaceFullAbstraction.java  InterfaceOvercomesMultInherit.java  areaCalcUsingAbstract.java  assignments.txt
Java/4th_Sem_JAVA_Lab/21-04-23/: CricketMethodOverloading.java  GradeCard.java  volBoxCube.java
Java/4th_Sem_JAVA_Lab/24-03-23/: AreaOfACircleUsingConstructor.java  FactorialOfANumberUsingConstructor.java  FibonacciSeriesPrintUsingConstructor.java  OddEvenCheckUsingConstructor.java  SimpleInterestUsingConstructor.java  TemperatureConversionUsingConstructor.java  VolumeOfBoxUsingConstructor.java
Java/4th_Sem_JAVA_Lab/26-05-23/: WrapperClass.java
Java/4th_Sem_JAVA_Lab/31-03-23/: CoupleSonDaughterProperty.java  gParentSonGsonInheritence.java  roomBedroomInheritence.java
Java/4th_Sem_JAVA_Lab/theory_class/: mathoperation.java
Java/Jshell/: java_notebook.ipynb
Java/java_practice/: AdditionMethodOverload.java  FactorialException.java  MultitaskingDemo.java  MultithreadingDemo.java  PrimeOddThreads.java  ProofEgg.java  SynchronizationDemo.java  dynamic_method_dispatch.java
Java/jdk_24_update_demo/: ScopedValueDemo.java  StreamGathererDemo.java
Python/: .env  demo.py
Python/4th_Sem_Python_lab/11-4-23/: Digits&TheirSumProdFunc.py  FibonacciSeriesFunc.py  StringConcatFunc.py  alphabeticalOrderName.py  armstrongCheckFunc.py  caseChangeFunc.py  factorialCalcUsingFunc.py  factorsFindFunc.py  naturalNumberFunc.py  oddEven&theirSumFunc.py  palindromeCheckFunc.py  powerOfNumberFunc.py  primeCheckFunc.py  primeNosPrintFunc.py  sinSeriesFunc.py  tasks.txt
Python/4th_Sem_Python_lab/18-4-23/: assignment.txt  caseChange.py  maxBetThreeNum.py  oddEven.py  recurFact.py  recursivePower.py  stringPalCheck.py  stringRev.py  vcCount.py
Python/4th_Sem_Python_lab/27-03-23/: armstrongNumCheck.py  calculatePowerOfANumber.py  countDigitsOfNum_ProdAndSum.py  factorialOfANumber.py  fibonacciSeriesPrint.py  findFactorsOfANumber.py  oddEvenPrintAndTheirSum.py  palindromeCheck.py  pattern1.py  pattern2.py  primeCheck.py  printNaturalNumbers.py  problems.txt
Python/4th_Sem_Python_lab/4-4-23/: numPattern1.py  numPattern2.py  perfectNumbersInRange.py  primeNosInRange.py  printAllPrimeFactorsOfANumber.py  sumOfSeries1.py  sumOfSeries2.py  sumOfSeries3.py
Python/4th_Sem_Python_lab/before-27/: arithmaticPerform.py  expressionEvaluation.py  gradeCalculation.py  leapYearCheck.py  maxAmongThreeNumbers.py  numberSwapping.py  vowelConsonentCheck.py
Python/Kanetkar_exercises/Python_basics/: Integer_types_operations.py  Math_module_impl.py  Mathematical_built_in_func_impl.py  Type_conversion.py  float_complex_bool_vars_and_ops_impl.py
Python/extra/: bardvscgptTest.py  model_train.py  pattern.py  studentDetailsFromFiles.py
c/: compile.ps1
c++/: Assignment.txt  addition.cpp  factorial.cpp  fibonacci.cpp  leap_year_check.cpp  op_overload.cpp  palindrome_check.cpp  power_of_num.cpp  practice2.cpp  prime_check.cpp  test.cpp
c++/17-8-23/: armstrong_class.cpp  factorial_using_class.cpp  fibonacci_class.cpp  leap_year_class.cpp  palindrome_class.cpp  power_of_num_class.cpp  prime_check_class.cpp
c++/23-11-23/: copy_constructor.cpp  multiple_inheritance.cpp  virtual_function.cpp
c++/7-9-23/: assignment.txt  sro_access_static_var_class.cpp  sro_def_func_out_class.cpp  sro_global_local_var.cpp  sro_mult_inheritance.cpp  sro_namespace.cpp  sro_nested_class.cpp
c++/9-11-23/: avg_of_four_nums_inline.cpp  friend_function.cpp  max_of_two_inline.cpp  result_of_series_inline.cpp  simple_inheritance.cpp
c++/own_practice/: complex_number_operator_overloading.cpp  matrix_add_mult_op_overload.cpp  quick_sort.cpp
c++/own_practice/hackerrank_pointer/: pointer1.cpp
c/COMPT_PRG/Codechef/: Chef-mask.c  Roller-coaster.c  bread.c  chef-gym.c  dnastrain.c  mango-truck.c  six_friends.c  volcontrol.c  who_is_taller.c
c/College_Practice/Array_problems_3rd_sem/: 1D_Array_BinSearch.c  1D_Array_Delval.c  1D_Array_EvenOdd_sum.c  1D_Array_Instval.c  1D_Array_LinSearch.c  Array_reverse.c  Matrix_Addition.c  Matrix_Multiplication.c  Matrix_Subtraction.c
c/College_Practice/Computer_networking/: checksum_receiver.c  checksum_sender.c  crc_full_implement.c  crc_receiver_2.c  crc_sender.c  parity_checker.c  parity_generator.c  test.c
c/College_Practice/DAA_5th_sem/: bubble_sort.c  insertion_sort.c  merge_sort.c  parthib_sorting.c  selection_sort.c  signal_test.c  tower_of_hanoi.c
c/College_Practice/DSA problems 3rd sem/: Circular_queue_modulo_op.c  Insertion_Sort.c  Queue.c  Selection_Sort.c  quick_sort.c
c/College_Practice/DSA_problems_3rd_sem/: Circular_queue.c  DoublyLinkedList.c  LinkedListTry.c  (+11 more)
c/RAII/: raii_demo.c  raii_demo.c~
c/RPS_game/: adarsh_rps.c  main.c  rps_game.c  rps_game.h
c/Test_progs/: Extern_und2.c  Structure_problem.c  Test3.c  Variable_und.c  decimal_to_binary.c  local_var.c  matrix_addition.c  my_concept.c  no_diff.c  parthib_numericals.c  print_c  print_c.c  print_cpp  print_cpp.cpp  shift _operator.c  stringLength.c  structure_test.c  structure_test2.c  test.c  test2  test2.c  test4.c  tild_operator.c
c/dijkstra_demo/: benchmark_dijkstra.c  modified_sssp_dijkstra.c  original_dijkstra.c  sssp_dijkstra.c
c/dijkstra_demo/production_sssp/: CMakeLists.txt  README.md  demo.c  sssp.pc.in  test_sssp.c
c/dijkstra_demo/production_sssp/include/: find_pivots.h  graph.h  partitioning_heap.h  sssp_algorithm.h  sssp_common.h  vertex_set.h
c/dijkstra_demo/production_sssp/src/: find_pivots.c  graph.c  partitioning_heap.c  sssp_algorithm.c  sssp_common.c  vertex_set.c
csharp/: hello_world.cs
d_lang/: basicTypes.d  hello.d
(+116 files in other folders)
